--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="https://wycliffe-mwebi.github.io/portfoliocss/styles.css">
+	<link rel="stylesheet" href="https://wycliffe-mwebi.github.io/portfolio/css/styles.css">
 
 	
 
