--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ This repository contains curated dashboards and visualizations I have created in
 
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
-<script src="https://wycliffe-mwebi.github.io/portfoliojs/template.js"></script>
+<script src="https://wycliffe-mwebi.github.io/portfolio/js/template.js"></script>
 <script id="dsq-count-scr" src="//hugo-initio-site.disqus.com/count.js" async></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
