--- a/service/service3/index.html
+++ b/service/service3/index.html
@@ -8,7 +8,7 @@
 
 	<title>Data Science &amp; ML -using Python</title>
 
-	<link rel="shortcut icon" href="https://wycliffe-mwebi.github.io/portfolioimages/gt_favicon.png">
+	<link rel="shortcut icon" href="https://wycliffe-mwebi.github.io/portfolio/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 	
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	<link rel="stylesheet" href="https://wycliffe-mwebi.github.io/portfoliocss/styles.css">
+	<link rel="stylesheet" href="https://wycliffe-mwebi.github.io/portfolio/css/styles.css">
 
 	
 
@@ -28,9 +28,9 @@
 
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="2">
-           <div class="banner" style="background-image:url(https://wycliffe-mwebi.github.io/portfolioimages/deep-Learn.gif);" >
+           <div class="banner" style="background-image:url(https://wycliffe-mwebi.github.io/portfolio/images/deep-Learn.gif);" >
            <h1 id="logo" class="text-center">
-              <img class="img-circle" src="https://wycliffe-mwebi.github.io/portfolioimages/mypic3.jpg" alt="">
+              <img class="img-circle" src="https://wycliffe-mwebi.github.io/portfolio/images/mypic3.jpg" alt="">
               <span class="title">Wycliffe Mwebi</span>
               <span class="tagline">Data Science &amp; Machine Learning Specialist<br>
                  <a href="mailto:wikie7@gmail.com">wikie7@gmail.com</a>
