--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
 	<meta name="author"      content="Sergey Pozhilov (GetTemplate.com)">
 
-	<title>Initio - Free, multipurpose html5 template by GetTemplate</title>
+	<title>Wycliffe Mwebi-Portfolio</title>
 
 	<link rel="shortcut icon" href="https://wycliffe-mwebi.github.io/portfolio/images/gt_favicon.png">
 
