--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@ This repository contains curated dashboards and visualizations I have created in
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <a class="thumbnail" href="https://github.com/Wycliffe-Mwebi/Data-science-portfolio-Projects-Using-Python/tree/master/Cryptocurrency%20Market%20Analysis">
                     <span class="img">
-                        <img src="images/crypto-analysis-1.png" alt="">
+                        <img src="images/climate.jpg" alt="">
                         <span class="cover"><span class="more">See details &rarr;</span></span>
                     </span>
-                    <span class="title">Cryptocurrency Market Analysis</span>
+                    <span class="title">Climate Change News Analysis</span>
                 </a>
                 <span class="details">
                     
