--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ This repository contains curated dashboards and visualizations I have created in
     <div class="thumbnails recentworks">
         
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
-                <a class="thumbnail" href="https://github.com/Wycliffe-Mwebi/Data-science-portfolio-Projects-Using-Python/tree/master/Cryptocurrency%20Market%20Analysis">
+                <a class="thumbnail" href="https://github.com/Wycliffe-Mwebi/Climate-Change-News-Scrapping-Projects">
                     <span class="img">
                         <img src="images/climate.jpg" alt="">
                         <span class="cover"><span class="more">See details &rarr;</span></span>
