--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <div class="">
         
             <div class="col-sm-6 col-md-3">
-                <h3 class="text-center">Data Science &amp; ML -using Python</h3>
+                <h3 class="text-center">Predictive Analytics -using Python</h3>
                 <p><p>My Data Science Repository containing portfolio projects completed for Industry, academic, self learning, and professional purposes. Presented in the form of Jupyter Notebooks.   <br>
 -Tools; Python: NumPy, Pandas, Seaborn, Matplotlib
 Machine Learning: scikit-learn, TensorFlow, keras</p></p>
