--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Machine Learning: scikit-learn, TensorFlow, keras</p></p>
             </div>
         
             <div class="col-sm-6 col-md-3">
-                <h3 class="text-center">Natural Language Processing(NLP)</h3>
+                <h3 class="text-center">NLP Projects</h3>
                 <p><p>My Data Science Natural Language Processing(NLP) Repository containing portfolio projects completed for Industry, academic, self learning, and professional purposes. Presented in the form of Jupyter Notebooks.   <br>
 -Tools; Python
 Machine Learning: RandomForest, caret</p></p>
@@ -115,7 +115,7 @@ Machine Learning: RandomForest, caret</p></p>
             </div>
         
             <div class="col-sm-6 col-md-3">
-                <h3 class="text-center">Data Visualization Projects</h3>
+                <h3 class="text-center">Data Visualization</h3>
                 <p><p>Beautiful data visualization can have powerful implications for data users experience and ability to uncover deeper insights and drill deeper into their data in order to make better business decisions.
 This repository contains curated dashboards and visualizations I have created in Tableau.</p></p>
                 <p class="text-center"><a href="https://wycliffe-mwebi.github.io/portfolio/service/service4/" class="btn btn-action">Read more</a></p>
