--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
         
             <div class="col-sm-6 col-md-3">
-                <h3 class="text-center">NLP Projects</h3>
+                <h3 class="text-center">NLP <br> Projects</h3>
                 <p><p>My Data Science Natural Language Processing(NLP) Repository containing portfolio projects completed for Industry, academic, self learning, and professional purposes. Presented in the form of Jupyter Notebooks.   <br>
 -Tools; Python</p></p>
                 <p class="text-center"><a href="https://wycliffe-mwebi.github.io/portfolio/service/service1/" class="btn btn-action">Read more</a></p>
