--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="col-sm-6 col-md-3">
                 <h3 class="text-center">Data Visualization</h3>
                 <p><p>Beautiful data visualization can have powerful implications for data users experience and ability to uncover deeper insights. This repository contains curated dashboards and visualizations I have created. <br>
-  -Tools; Tableau, Streamlit, Plotly, Dash, Matplotlib.</p></p>              
+  -Tools; Tableau, Streamlit, Plotly, Dash.</p></p>              
 	<p class="text-center"><a href="https://wycliffe-mwebi.github.io/portfolio/service/service4/" class="btn btn-action">Read more</a></p>
             </div>
         
