--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                 <a class="thumbnail" href="https://github.com/Wycliffe-Mwebi/Web-Scraping-Projects">
                     <span class="img">
-                        <img src="images/webscraping.jpg" alt="">
+                        <img src="images/consumer_sentiment.jpg" alt="">
                         <span class="cover"><span class="more">See details &rarr;</span></span>
                     </span>
-                    <span class="title">Web Scraping Projects</span>
+                    <span class="title">Consumer Sentiment Analysis</span>
                 </a>
                 <span class="details">
                     
