--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   feasible for you to retain in-house on a long-term basis. <b> Talk to me </b>. </p>
             </div>
             <div class="col-lg-4 text-right">
-                <a href= "./docs/Resume-Wycliffe-Datascience.pdf" class="btn btn-primary btn-lg">Download CV></a>
+                <a href= "./docs/Resume-Wycliffe-1[3].pdf" class="btn btn-primary btn-lg">Download CV></a>
             </div>
         </div>
     </div>
