--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <h3 class="text-center">Predictive Analytics</h3>
                 <p><p>My Data Science Predictive Analytics Repository containing portfolio projects completed for Industry, academic, self learning, and professional purposes. Presented in the form of Jupyter Notebooks.   <br>
 -Tools; Python</p></p>
-                <p class="text-center"><a href="https://wycliffe-mwebi.github.io/portfolio/service/service3/" class="btn btn-action">Read more</a></p>
+                <p class="text-center"><a href="https://github.com/Wycliffe-Mwebi/Predictive-Analytics-Portfolio/blob/master/Predictive_Analytics_Portfolio.ipynb" class="btn btn-action">Read more</a></p>
             </div>
         
             <div class="col-sm-6 col-md-3">
