--- a/service/service1/index.html
+++ b/service/service1/index.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 </nav>
-<nav class="navbar navbar-fake"></nav>
+<!-- <nav class="navbar navbar-fake"></nav> -->
 
 
 </header>
