--- a/about/index.html
+++ b/about/index.html
@@ -99,7 +99,7 @@
                 <p>Born and raised in Nairobi, Kenya I graduated from the University of Sunderland, UK with a BS in Computer Studies and a Master’s degree in Innovation, Technology and Law from the University of Edinburgh, UK.</p>
 <p>For over ten years, I have worked on data-related things at several organizations including the International Monetary Fund (IMF) in Washington DC and SICPA in Switzerland. I have consulted for several others, including French Multinational Bull Atos. I also frequently work with early-stage startups on a variety of different projects.</p>
 <p>Currently, I am a Senior Data Scientist at Atos - an IT services & Data Science consulting and outsourcing firm enabling businesses to churn through terabytes of data to transform information into knowledge –leveraging Artificial Intelligence and Machine learning technologies to help organizations uncover hidden truths and inter-dependencies that eventually translate to actionable business insights.</p>
-<p>As a Data Scientist, I operate somewhere in the intersection of data, engineering, product, and growth.</p>
+<p>As a Data Scientist, I leverage Artificial Intelligence and Machine learning technologies to help the organization and its clients uncover hidden truths and inter-dependencies that eventually translate data to actionable business insights..</p>
 <p>If you want to get in touch, I&rsquo;m available over <a href="mailto:wikie7@gmail.com">email</a></p>
 <p><img src="../images/mac.jpg" alt="about"></p>
 
