--- a/about/index.html
+++ b/about/index.html
@@ -97,10 +97,9 @@
 			
 			<article class="col-sm-8 maincontent">
                 <p>Born and raised in Nairobi, Kenya I graduated from the University of Sunderland, UK with a BS in Computer Studies and a Master’s degree in Innovation, Technology and Law from the University of Edinburgh, UK.</p>
-<p>I have ten years’ experience analyzing large data sets, data modeling, data extraction, data ingestion, cleaning, transformation, harmonization and development of machine learning models at several multinational organizations including the International Monetary Fund (IMF) in Washington DC and SICPA in Switzerland. I also frequently work with early-stage startups on a variety of different projects.</p>
-<p>Currently, I am a Senior Data Scientist at Atos - an IT services & Data Science consulting and outsourcing firm enabling businesses to churn through terabytes of data to transform information into knowledge –leveraging Artificial Intelligence and Machine learning technologies to help organizations uncover hidden truths and inter-dependencies that eventually translate to actionable business insights.</p>
+<p>Currently, I am a Head of Data Science and Engineering - with 10+ years of experience in developing and maintaining scalable data pipelines that will ingest, transform, and distribute data streams and/or batches within the AWS, Snowflake and Microsoft Platforms enabling businesses to churn through terabytes of data to transform information into knowledge –leveraging Artificial Intelligence and Machine learning technologies to help organizations uncover hidden truths and inter-dependencies that eventually translate to actionable business insights.</p>
 
-<p>If you want to get in touch, I&rsquo;m available over <a href="mailto:wikie7@gmail.com">email</a></p>
+<p>If you would like to get in touch, I&rsquo;m available over <a href="mailto:wikie7@gmail.com">email</a></p>
 <p><img src="../images/mac.jpg" alt="about"></p>
 
 			</article>
